@@ -1,0 +1,1 @@
+INSERT INTO `rule_values` VALUES ('1', 'NPC:SmartLastFightingDelayMoving', 'true', 'When true, mobs that started going home previously will do so again immediately if still on FD hate list');
